Fix on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -649,6 +649,10 @@ section#single-wrap img {
   header .h-wrap { padding: 40px 30px; }
   header .h-wrap .menu-icon { margin-top: 2px; }
 
+  #slider {
+    display: block;
+  }
+  
   #next,
   #prev {
     position: static;
